--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
     <title>Website</title>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZEPXEL7BCG"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-ZEPXEL7BCG');
+        </script>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
     </head>
